Revision history for {{$dist->name}}

{{$NEXT}}

0.24      2015-04-22 17:24:15 -0400
  - Fix the synopsis to be more accurate

0.23      2015-04-22 07:26:11 -0400
  - install into arch specific directory

0.22      2014-10-08 14:34:37 -0400
  - add version method
  - fixed weird recursive deps on MSWin32

0.21      2014-06-19 07:41:16 -0400
  - promoted to production

0.20_04   2014-06-18 16:02:34 -0400
  - explicitly declare Alien::bz2::Installer as a configure prereq

0.20_03   2014-06-18 07:55:33 -0400
  - use Alien::LZO::Installer to find / install libzo2 if possible

0.20_02   2014-06-17 03:49:45 -0400
  - mock up a libbz2.la on MSWin32 so that bzip2 + libarchive dll works

0.20_01   2014-06-16 18:21:55 -0400
  - use Alien::bz2::Installer if possible to build libbz2 if it is not provided by OS

0.20      2014-06-10 20:32:27 -0400
  - mark prereqs as dynamic

0.19      2014-06-10 20:17:45 -0400
  - dynamic libs handle upgrades more gracefully
  - promote to production

0.18_06   2014-06-10 10:39:36 -0400
  - Archive::Libarchive::XS dev compat

0.18_05   2014-06-10 10:19:42 -0400
  - require Alien::Libarchive::Installer 0.03

0.18_04   2014-06-10 09:19:32 -0400
  - cflags reference bug fix

0.18_03   2014-06-10 09:06:55 -0400
  - fix prereqs

0.18_02   2014-06-10 08:36:20 -0400
  - libs and cflags now return a list in list context and a scalar in scalar context
    (used to always return a scalar)

0.18_01   2014-06-10 08:19:36 -0400
  - completely new implementation based on Alien::Libarchive::Installer instead of Alien::Base

0.18      2014-02-03 16:40:43 -0500
  - Fix ExtUtils::CChecker calling error

0.17      2014-02-03 16:37:39 -0500
  - remove -fPIC / -fno-common detection and instead rely on $Config{cccdlflags}
  - use $Config{optimize} for CFLAGS passed to libarchive configure

0.16      2014-02-02 04:30:52 -0500
  - build with -fPIC if possible

0.15      2014-01-29 11:30:49 -0500
  - fix prereqs

0.14      2014-01-29 09:37:52 -0500