@@ -1,38 +1,0 @@
-package Alien::Libarchive::Unix;
-
-use strict;
-use warnings;
-use base qw( Alien::Libarchive );
-
-# ABSTRACT: Build and make available libarchive on Unix
-# VERSION
-
-=head1 DESCRIPTION
-
-This module is deprecated and kept only for backwards
-compatibility.  You should use L<Alien::Libarchive>
-instead.
-
-=head1 SEE ALSO
-
-=over 4
-
-=item L<Alien::Libarchive>
-
-=item L<Archive::Libarchive::XS>
-
-=item L<Archive::Libarchive::FFI>
-
-=item L<Archive::Libarchive::Any>
-
-=item L<Archive::Ar::Libarchive>
-
-=item L<Archive::Peek::Libarchive>
-
-=item L<Archive::Extract::Libarchive>
-
-=back
-
-=cut
-
-1;
